...
        self.liveFontSize = fontSize
        super.init(frame: CGRect(x: 0, y: 0, width: 402, height: 700))
        bridge.attach(to: self)
        backgroundColor = .black
        isOpaque = true
        #if DEBUG
        accessibilityIdentifier = "MobileTerminalSurface"
        isAccessibilityElement = true
        #endif
        addSubview(snapshotFallbackView)
        addSubview(inputProxy)
        initializeSurface()

...
